mobile how it helps

--- a/platform/index.html
+++ b/platform/index.html
@@ -299,12 +299,12 @@
 <section id="how_it_helps" class="description_section">
 
     <div class="container">
-        <div class="row">
+        <div class="row description_column-reverse">
 
             <!--TABS-->
             <div class="col-md-7 description_tabs-container">
 
-                <h2>How it helps</h2>
+                <h2 class="hidden-xs">How it helps</h2>
 
                 <ul class="tabs description_tabs">
                     <li class="tab-link current" id="teachers_tab" data-tab="teachers" content="teachers_image">PE
@@ -391,7 +391,7 @@
             </div>
             <!--./TABS-->
 
-            <div class="col-sm-5 col-md-5 description_image hidden-xs">
+            <div class="col-sm-5 col-md-5 description_image">
                 <!--TAB IMAGES-->
                 <img id="teachers_image" class="tab-image current" src="../src/image/teacher.png"/>
                 <img id="schools_image" class="tab-image" src="../src/image/HH_Schools.png"/>
