--- a/platform/index.html
+++ b/platform/index.html
@@ -325,6 +325,15 @@
                     <li class="tab-link" id="parents_tab" data-tab="parents" content="parents_image">Parents</li>
                     <li class="tab-link" id="students_tab" data-tab="students" content="students_image">Students</li>
                 </ul>
+                <div class="slide-button-testimonials">
+                    <div class="container slide-button-container">
+                        <div class="slide-control-height">
+                            <a class="carousel-control slide-control visible-xs" href="#how_it_helps_carousel" data-slide="next">
+                                <span class="glyphicon slide-content"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
 
                 <div id="how_it_helps_carousel" class="carousel slide" data-ride="carousel" data-interval="false">
                     <div class="carousel-inner">
