mobile howithelps end

--- a/platform/index.html
+++ b/platform/index.html
@@ -325,13 +325,13 @@
                     <li class="tab-link" id="parents_tab" data-tab="parents" content="parents_image">Parents</li>
                     <li class="tab-link" id="students_tab" data-tab="students" content="students_image">Students</li>
                 </ul>
-                <div class="slide-button-testimonials">
+                <div class="slide-button-testimonials visible-xs">
                     <div class="container slide-button-container">
-                        <div class="slide-control-height">
-                            <a class="carousel-control slide-control visible-xs" href="#how_it_helps_carousel" data-slide="next">
+
+                            <a class="carousel-control slide-control" href="#how_it_helps_carousel" data-slide="next">
                                 <span class="glyphicon slide-content"></span>
                             </a>
-                        </div>
+
                     </div>
                 </div>
 
@@ -339,6 +339,8 @@
                     <div class="carousel-inner">
 
                         <div id="teachers" class="tab-content description_tabs-content current">
+                            <img class="tab-image current visible-xs" src="../src/image/teacher.png"/>
+                            <h3 class="visible-xs">PE Teachers</h3>
                             <strong>
                                 Spend your time doing sport. <br>
                                 Allow Squad In Touch to take care of the rest. <br>
@@ -358,6 +360,8 @@
                         </div>
 
                         <div id="schools" class="tab-content description_tabs-content">
+                            <img class="tab-image visible-xs" src="../src/image/HH_Schools.png"/>
+                            <h3 class="visible-xs">Schools</h3>
                             <strong>
                                 A sustainable sports software solution created to help you <br>
                                 develop and manage your PE strategy and inspire the next generation <br>
@@ -378,6 +382,8 @@
                         </div>
 
                         <div id="parents" class="tab-content description_tabs-content">
+                            <img class="tab-image visible-xs" src="../src/image/HH_Parents.png"/>
+                            <h3 class="visible-xs">Parents</h3>
                             <strong>
                                 Don’t JUST read results, <br>
                                 IMPROVE results with our Olympians advice.<br>
@@ -396,6 +402,8 @@
                         </div>
 
                         <div id="students" class="tab-content description_tabs-content">
+                            <img class="tab-image visible-xs" src="../src/image/HH_Students.png"/>
+                            <h3 class="visible-xs">Students</h3>
                             <strong>
                                 Get socialised around your sport life. <br>
                                 Keep in touch with your squad.<br>
@@ -417,7 +425,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-5 col-md-5 description_image">
+            <div class="col-sm-5 col-md-5 description_image hidden-xs">
                 <!--TAB IMAGES-->
                 <img id="teachers_image" class="tab-image current" src="../src/image/teacher.png"/>
                 <img id="schools_image" class="tab-image" src="../src/image/HH_Schools.png"/>
