--- a/platform/index.html
+++ b/platform/index.html
@@ -50,7 +50,7 @@
                                     <ul class="nav navbar-nav main_nav">
 
                                         <li class="main-menu-item">
-                                            <a class="menu-open" href="#" data-toggle="dropdown">
+                                            <a href="#" data-toggle="dropdown">
                                                 <b class="caret caret_custom"></b>
                                                 How it helps
                                             </a>
@@ -77,7 +77,7 @@
                                         </li>
 
                                         <li class="main-menu-item">
-                                            <a class="menu-open" href="#" data-toggle="dropdown">
+                                            <a href="#" data-toggle="dropdown">
                                                 <b class="caret caret_custom"></b>
                                                 How it works
                                             </a>
