--- a/platform/index.html
+++ b/platform/index.html
@@ -448,7 +448,7 @@
             <div class="col-md-5">
                 <h2>How it works</h2>
 
-                <ul class="vertical_tabs">
+                <ul class="vertical_tabs hidden-xs">
                     <li class="tab-link current" id="v-tab-1" data-tab="tab-1">Schools and PE teachers web app</li>
                     <li class="tab-link" id="v-tab-2" data-tab="tab-2">Schools public website and big screen</li>
                     <li class="tab-link" id="v-tab-3" data-tab="tab-3">Schools PE staff mobile app</li>
