--- a/platform/index.html
+++ b/platform/index.html
@@ -461,8 +461,12 @@
             <div class="col-md-6 col-md-offset-1">
                 <div class="how_it_works_right">
                     <div id="tab-1" class="vertical_tab-content current">
-                        <div class="text">
-                            <h6>Schools and PE teachers web app</h6>
+                        <a href="#accordion1" data-toggle="collapse" data-parent="#accordion" class="visible-xs">Schools
+                            and PE teachers web app</a>
+                        <div id="accordion1" class="text">
+                            <h6 class="hidden-xs">Schools and PE teachers web app</h6>
+
+
                             <p>
                                 • Manage school details, school forms, houses and pupils list <br>
                                 • Manage the fixtures calendar, extra-curricular clubs and mini-tournaments <br>
@@ -472,14 +476,15 @@
                                 notifications <br>
                                 • Keep your school sports news up to date
                             </p>
-                        </div>
                         <a class="img-wrapper show_img_popup" content="../src/image/HW_01_Schools_web.png">
                             <img src="../src/image/HW_01_Schools_web.png"/>
-                        </a>
+                        </a></div>
                     </div>
                     <div id="tab-2" class="vertical_tab-content">
-                        <div class="text">
-                            <h6>Schools public website and big screen</h6>
+                        <a href="#accordion2" data-toggle="collapse" data-parent="#accordion" class="visible-xs">Schools
+                            public website and big screen</a>
+                        <div id="accordion2" class="text">
+                            <h6 class="hidden-xs">Schools public website and big screen</h6>
                             <p>
                                 • Modern design, including a photo gallery on the landing page<br>
                                 • Highlighted events in the focus<br>
@@ -488,14 +493,16 @@
                                 • School fixtures calendar, game results, reports and photos are published
                                 automatically
                             </p>
-                        </div>
+
                         <a class="show_img_popup" content="../src/image/HW_02_Schools_public_web.png">
                             <img src="../src/image/HW_02_Schools_public_web.png"/>
-                        </a>
+                        </a></div>
                     </div>
                     <div id="tab-3" class="vertical_tab-content">
-                        <div class="text">
-                            <h6>Schools PE staff mobile app</h6>
+                        <a href="#accordion3" data-toggle="collapse" data-parent="#accordion" class="visible-xs">Schools
+                            PE staff mobile app</a>
+                        <div id="accordion3" class="text">
+                            <h6 class="hidden-xs">Schools PE staff mobile app</h6>
                             <p>
                                 • See your school fixtures calendar<br>
                                 • Input game results and match reports from the pitch<br>
@@ -504,14 +511,17 @@
                                 • Get notified about pupils unavailability to take part<br>
                                 • Send notifications to parents and students about last minutes changes
                             </p>
-                        </div>
+
                         <a class="show_img_popup" content="../src/image/HW_03_Schools_mobile.png">
                             <img src="../src/image/HW_03_Schools_mobile.png"/>
                         </a>
+                        </div>
                     </div>
                     <div id="tab-4" class="vertical_tab-content">
-                        <div class="text">
-                            <h6>Parents and students mobile app</h6>
+                        <a href="#accordion4" data-toggle="collapse" data-parent="#accordion" class="visible-xs">Parents
+                            and students mobile app</a>
+                        <div id="accordion4" class="text">
+                            <h6 class="hidden-xs">Parents and students mobile app</h6>
                             <p>
                                 • See a personalised fixtures calendar<br>
                                 • See game results and match reports in real time<br>
@@ -520,14 +530,17 @@
                                 • Send availability reports and respond to consent requests anytime, anywhere<br>
                                 • Communicate with school PE staff as well as other parents and students
                             </p>
-                        </div>
+
                         <a class="show_img_popup" content="../src/image/HW_04_Parents_mobile.png">
                             <img src="../src/image/HW_04_Parents_mobile.png"/>
                         </a>
+                        </div>
                     </div>
                     <div id="tab-5" class="vertical_tab-content">
-                        <div class="text">
-                            <h6>Tournaments and events website</h6>
+                        <a href="#accordion5" data-toggle="collapse" data-parent="#accordion" class="visible-xs">Tournaments
+                            and events website</a>
+                        <div id="accordion5" class="text">
+                            <h6 class="hidden-xs">Tournaments and events website</h6>
                             <p>
                                 • Well designed group results and finals pages<br>
                                 • Game results presented automatically once submitted<br>
@@ -535,14 +548,17 @@
                                 • Detailed results for each school which participated<br>
                                 • Printable and email-adjusted PDFs with overall tournament results
                             </p>
-                        </div>
+
                         <a class="show_img_popup" content="../src/image/HW_05_Tournaments.png">
                             <img src="../src/image/HW_05_Tournaments.png"/>
                         </a>
+                        </div>
                     </div>
                     <div id="tab-6" class="vertical_tab-content">
-                        <div class="text">
-                            <h6>Schools sports partnerships website</h6>
+                        <a href="#accordion6" data-toggle="collapse" data-parent="#accordion" class="visible-xs">Schools
+                            sports partnerships website</a>
+                        <div id="accordion6" class="text">
+                            <h6 class="hidden-xs">Schools sports partnerships website</h6>
                             <p>
                                 • Modern design, photo gallery on the landing page<br>
                                 • Seasonal tables are published automatically once game results are submitted<br>
@@ -550,10 +566,11 @@
                                 • SSP sport news<br>
                                 • Dedicated website for each event hosted on Squad In Touch servers for free
                             </p>
-                        </div>
+
                         <a class="show_img_popup" content="../src/image/HW_06_SSP.png">
                             <img src="../src/image/HW_06_SSP.png">
                         </a>
+                        </div>
                     </div>
                 </div>
             </div>
