--- a/platform/index.html
+++ b/platform/index.html
@@ -512,8 +512,8 @@
                                 • Send notifications to parents and students about last minutes changes
                             </p>
 
-                        <a class="show_img_popup" content="../src/image/HW_03_Schools_mobile.png">
-                            <img src="../src/image/HW_03_Schools_mobile.png"/>
+                        <a class="show_img_popup" content="../src/image/HW_03_Schools_mobile_large.png">
+                            <img class="full-width" src="../src/image/HW_03_Schools_mobile.png"/>
                         </a>
                         </div>
                     </div>
