--- a/platform/index.html
+++ b/platform/index.html
@@ -554,7 +554,7 @@
                         </a>
                         </div>
                     </div>
-                    <div id="tab-6" class="vertical_tab-content">
+                    <div id="tab-6" class="vertical_tab-content vertical_tab-content-bottom">
                         <a href="#accordion6" data-toggle="collapse" data-parent="#accordion" class="visible-xs">Schools
                             sports partnerships website</a>
                         <div id="accordion6" class="text">
