--- a/platform/index.html
+++ b/platform/index.html
@@ -477,7 +477,7 @@
                                 • Keep your school sports news up to date
                             </p>
                         <a class="img-wrapper show_img_popup" content="../src/image/HW_01_Schools_web.png">
-                            <img src="../src/image/HW_01_Schools_web.png"/>
+                            <img src="../src/image/HW_01_Schools_web_Small.png"/>
                         </a></div>
                     </div>
                     <div id="tab-2" class="vertical_tab-content">
@@ -495,7 +495,7 @@
                             </p>
 
                         <a class="show_img_popup" content="../src/image/HW_02_Schools_public_web.png">
-                            <img src="../src/image/HW_02_Schools_public_web.png"/>
+                            <img src="../src/image/HW_02_Schools_public_web_Small.png">
                         </a></div>
                     </div>
                     <div id="tab-3" class="vertical_tab-content">
@@ -532,7 +532,7 @@
                             </p>
 
                         <a class="show_img_popup" content="../src/image/HW_04_Parents_mobile.png">
-                            <img src="../src/image/HW_04_Parents_mobile.png"/>
+                            <img src="../src/image/HW_04_Parents_mobile_Small.png"/>
                         </a>
                         </div>
                     </div>
@@ -550,7 +550,7 @@
                             </p>
 
                         <a class="show_img_popup" content="../src/image/HW_05_Tournaments.png">
-                            <img src="../src/image/HW_05_Tournaments.png"/>
+                            <img src="../src/image/HW_05_Tournaments_Small.png"/>
                         </a>
                         </div>
                     </div>
