Last image changed

--- a/platform/index.html
+++ b/platform/index.html
@@ -567,8 +567,8 @@
                                 • Dedicated website for each event hosted on Squad In Touch servers for free
                             </p>
 
-                        <a class="show_img_popup" content="../src/image/HW_06_SSP.png">
-                            <img src="../src/image/HW_06_SSP.png">
+                        <a class="show_img_popup" content="../src/image/HW_06_Union.png">
+                            <img src="../src/image/HW_06_Union_Small.png"/>
                         </a>
                         </div>
                     </div>
