--- a/platform/index.html
+++ b/platform/index.html
@@ -146,7 +146,7 @@
 
 
     <!--SLIDER-->
-    <div id="myCarousel" class="carousel slide platform_slider" data-interval="false" data-ride="carousel">
+    <div id="myCarousel" class="carousel slide platform_slider" data-interval="10000" data-ride="carousel">
         <div class="carousel-inner">
 
             <!--first slide-->
@@ -158,7 +158,7 @@
                         <div class="slider_content-top">
                             <h3>
                                 Kids and youth sports development platform
-                                supported by the team of Olympians. <br class="hidden-xs">
+                                supported by the team of Olympians. <br>
                                 Make sport fun again.
                             </h3>
 
@@ -313,7 +313,7 @@
         <div class="row description_column-reverse">
 
             <!--TABS-->
-            <div class="col-md-7 description_tabs-container">
+            <div class="col-md-7 col-sm-7 description_tabs-container">
 
                 <h2 class="hidden-xs">How it helps</h2>
 
@@ -448,7 +448,7 @@
             <div class="col-md-5">
                 <h2>How it works</h2>
 
-                <ul class="vertical_tabs hidden-xs">
+                <ul class="vertical_tabs hidden-xs hidden-sm">
                     <li class="tab-link current" id="v-tab-1" data-tab="tab-1">Schools and PE teachers web app</li>
                     <li class="tab-link" id="v-tab-2" data-tab="tab-2">Schools public website and big screen</li>
                     <li class="tab-link" id="v-tab-3" data-tab="tab-3">Schools PE staff mobile app</li>
@@ -461,10 +461,10 @@
             <div class="col-md-6 col-md-offset-1">
                 <div class="how_it_works_right">
                     <div id="tab-1" class="vertical_tab-content current">
-                        <a href="#accordion1" data-toggle="collapse" data-parent="#accordion" class="visible-xs">Schools
+                        <a href="#accordion1" data-toggle="collapse" data-parent="#accordion" class="visible-xs visible-sm">Schools
                             and PE teachers web app</a>
                         <div id="accordion1" class="text">
-                            <h6 class="hidden-xs">Schools and PE teachers web app</h6>
+                            <h6 class="hidden-xs hidden-sm">Schools and PE teachers web app</h6>
 
 
                             <p>
@@ -481,10 +481,10 @@
                         </a></div>
                     </div>
                     <div id="tab-2" class="vertical_tab-content">
-                        <a href="#accordion2" data-toggle="collapse" data-parent="#accordion" class="visible-xs">Schools
+                        <a href="#accordion2" data-toggle="collapse" data-parent="#accordion" class="visible-xs visible-sm">Schools
                             public website and big screen</a>
                         <div id="accordion2" class="text">
-                            <h6 class="hidden-xs">Schools public website and big screen</h6>
+                            <h6 class="hidden-xs hidden-sm">Schools public website and big screen</h6>
                             <p>
                                 • Modern design, including a photo gallery on the landing page<br>
                                 • Highlighted events in the focus<br>
@@ -499,10 +499,10 @@
                         </a></div>
                     </div>
                     <div id="tab-3" class="vertical_tab-content">
-                        <a href="#accordion3" data-toggle="collapse" data-parent="#accordion" class="visible-xs">Schools
+                        <a href="#accordion3" data-toggle="collapse" data-parent="#accordion" class="visible-xs visible-sm">Schools
                             PE staff mobile app</a>
                         <div id="accordion3" class="text">
-                            <h6 class="hidden-xs">Schools PE staff mobile app</h6>
+                            <h6 class="hidden-xs hidden-sm">Schools PE staff mobile app</h6>
                             <p>
                                 • See your school fixtures calendar<br>
                                 • Input game results and match reports from the pitch<br>
@@ -518,10 +518,10 @@
                         </div>
                     </div>
                     <div id="tab-4" class="vertical_tab-content">
-                        <a href="#accordion4" data-toggle="collapse" data-parent="#accordion" class="visible-xs">Parents
+                        <a href="#accordion4" data-toggle="collapse" data-parent="#accordion" class="visible-xs visible-sm">Parents
                             and students mobile app</a>
                         <div id="accordion4" class="text">
-                            <h6 class="hidden-xs">Parents and students mobile app</h6>
+                            <h6 class="hidden-xs hidden-sm">Parents and students mobile app</h6>
                             <p>
                                 • See a personalised fixtures calendar<br>
                                 • See game results and match reports in real time<br>
@@ -537,10 +537,10 @@
                         </div>
                     </div>
                     <div id="tab-5" class="vertical_tab-content">
-                        <a href="#accordion5" data-toggle="collapse" data-parent="#accordion" class="visible-xs">Tournaments
+                        <a href="#accordion5" data-toggle="collapse" data-parent="#accordion" class="visible-xs visible-sm">Tournaments
                             and events website</a>
                         <div id="accordion5" class="text">
-                            <h6 class="hidden-xs">Tournaments and events website</h6>
+                            <h6 class="hidden-xs hidden-sm">Tournaments and events website</h6>
                             <p>
                                 • Well designed group results and finals pages<br>
                                 • Game results presented automatically once submitted<br>
@@ -555,10 +555,10 @@
                         </div>
                     </div>
                     <div id="tab-6" class="vertical_tab-content vertical_tab-content-bottom">
-                        <a href="#accordion6" data-toggle="collapse" data-parent="#accordion" class="visible-xs">Schools
+                        <a href="#accordion6" data-toggle="collapse" data-parent="#accordion" class="visible-xs visible-sm">Schools
                             sports partnerships website</a>
                         <div id="accordion6" class="text">
-                            <h6 class="hidden-xs">Schools sports partnerships website</h6>
+                            <h6 class="hidden-xs hidden-sm">Schools sports partnerships website</h6>
                             <p>
                                 • Modern design, photo gallery on the landing page<br>
                                 • Seasonal tables are published automatically once game results are submitted<br>
@@ -588,12 +588,12 @@
 
     <div class="container testimonial">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-4">
                 <div class="testimonial_logo">
                     <img src="../src/image/isa-logo.png" alt="isa">
                 </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-7 col-sm-7">
                 <div class="testimonial_content">
                     <h4 class="testimonial_title">
                         Independent Schools Association
@@ -614,12 +614,12 @@
 
     <div class="container testimonial">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-4">
                 <div class="testimonial_logo">
                     <img src="../src/image/melbourne_junior_school.jpg" alt="Sir John Talbot's school">
                 </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-7 col-sm-7">
                 <div class="testimonial_content">
                     <h4 class="testimonial_title">
                         Melbourne Junior School
@@ -717,7 +717,7 @@
     <div class="container">
         <div class="row">
 
-            <div class="col-md-4 reilly_image-container">
+            <div class="col-md-4 col-sm-6 reilly_image-container">
 
                 <div class="reilly_image-round-container">
                     <div class="reilly_image"></div>
@@ -725,7 +725,7 @@
 
             </div>
 
-            <div class="col-md-8">
+            <div class="col-md-8 col-sm-6">
                 <div class="reilly_about hidden-xs">
                     <p>
                         “I am a Double Olympian and PE teacher but to my 3 children I am Dad.
@@ -842,7 +842,7 @@
     <div class="container">
         <div class="row">
 
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-6">
                 <div class="contact_section-left">
                     <h3>
                         Feel free to ask questions via email, <br class="hidden-xs">
@@ -852,7 +852,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-6">
 
                 <div class="contact_section-right">
 
@@ -888,14 +888,14 @@
 <footer class="contacts">
     <div class="container">
         <div class="row">
-            <div class="col-md-2 contacts-margin">
+            <div class="col-md-2 col-sm-3 contacts-margin">
                 <div class="fontbold">Squad In Touch Ltd</div>
                 <div>Pacific House, 382
                     Kenton Road Harrow
                     Middlesex, HA3 8DP
                 </div>
             </div>
-            <div class="col-md-2 contacts-margin">
+            <div class="col-md-2 col-sm-3 contacts-margin">
                 <div class="fontbold">Contact information</div>
                 <div><a href="mailto:info@squadintouch.co.uk">info@squadintouch.co.uk</a>
                     01293 734004
@@ -904,7 +904,7 @@
                         class="contact-divider-color">&nbsp; | &nbsp;</span>
                     <a class="contact-decoration" href="https://twitter.com/squadintouch"> Twitter</a></div>
             </div>
-            <div class="col-md-4 col-md-offset-4 copyright-position">
+            <div class="col-md-4 col-sm-3 col-md-offset-4 col-sm-offset-3 copyright-position">
                 <img src="../src/image/logoccss.svg" alt="reily"/>
             </div>
         </div>
