--- a/sport/index.html
+++ b/sport/index.html
@@ -43,7 +43,7 @@
                             </div>
                             <div class="collapse main-menu" id="navbar-main">
                                 <div class="main-menu-overlay">
-                                    <ul class="nav navbar-nav main_nav hidden-xs">
+                                    <ul class="nav navbar-nav main_nav hidden-xs hidden-sm">
                                         <li class="main-menu-item"><a class="smooth_scroll" href="#howitworks">How it
                                             works</a></li>
                                         <li class="main-menu-item"><a class="smooth_scroll" href="#speakers">Team</a>
@@ -63,7 +63,7 @@
                                         </li>
                                         <li class="main-menu-item close_menu"><a>Close</a>
                                     </ul>
-                                    <ul class="nav navbar-nav main_nav visible-xs">
+                                    <ul class="nav navbar-nav main_nav visible-xs visible-sm">
                                         <li class="main-menu-item close-sandwich"><a class="smooth_scroll" href="#howitworks">How it
                                             works</a></li>
                                         <li class="main-menu-item close-sandwich"><a class="smooth_scroll" href="#sportsmens-mobile">Team</a>
@@ -101,7 +101,7 @@
         <!--<div class="row">-->
         <div>
             <!-- Карусель -->
-            <div id="myCarousel" class="carousel slide" data-interval="0" data-ride="carousel">
+            <div id="myCarousel" class="carousel slide" data-interval="10000" data-ride="carousel">
                 <div class="carousel-inner">
 
                     <!--FIRST SLIDE-->
@@ -176,7 +176,7 @@
                                 <div class="slider_content-top">
                                     <h3>
                                         Kids and youth sports development platform
-                                        supported by the team of Olympians. <br class="hidden-xs">
+                                        supported by the team of Olympians. <br>
                                         Make sport fun again.
                                     </h3>
 
@@ -254,7 +254,7 @@
     <div class="container ">
         <div class="row">
             <div class="event_section-image visible-xs"></div>
-            <div class="col-md-5 event_section-left">
+            <div class="col-md-5 col-sm-6 event_section-left">
                 <h3> What is Sports Stars Inspiration Day?</h3>
                 <div class="event_section-text">
                     The Sport Stars Inspiration Day is a time for pupils to raise their bar of aspiration and ambition.
@@ -263,7 +263,7 @@
                 </div>
                 <button class="button--primary event-button" href="#myModal" data-toggle="modal">Event Enquiry</button>
             </div>
-            <div class="col-md-6 col-md-offset-1 event_section-right hidden-xs">
+            <div class="col-md-6 col-sm-6 col-md-offset-1 event_section-right hidden-xs">
                 <div class="event_section-image"></div>
             </div>
         </div>
@@ -996,7 +996,7 @@
             <div class="slider_content-top">
                 <h3>
                     Kids and youth sports development platform
-                    supported by the team of Olympians. <br class="hidden-xs">
+                    supported by the team of Olympians. <br>
                     Make sport fun again.
                 </h3>
 
