--- a/platform/index.html
+++ b/platform/index.html
@@ -351,8 +351,6 @@
                             • Keep records of pupils performance and discipline up to date <br>
                             • Communicate with parents and pupils <br>
                             • Improve PE practice; getting in touch with other PE teachers and our team of Olympians
-                            Spend your
-                            time doing the sport. Allow Squad In Touch to take care of the rest.
 
                             <a href="https://app.squadintouch.com/#register" target="_blank">
                                 <button class="button--primary description_button">Sign up for free</button>
@@ -494,8 +492,8 @@
                                 automatically
                             </p>
 
-                        <a class="show_img_popup" content="../src/image/HW_02_Schools_public_web.png">
-                            <img src="../src/image/HW_02_Schools_public_web_Small.png">
+                        <a class="show_img_popup" content="../src/image/HW_02_Schools_public%20web-New%20Final.png">
+                            <img src="../src/image/HW_02_Schools_public%20web-New-Small%20Final.png">
                         </a></div>
                     </div>
                     <div id="tab-3" class="vertical_tab-content">
