--- a/sport/index.html
+++ b/sport/index.html
@@ -101,7 +101,7 @@
         <!--<div class="row">-->
         <div>
             <!-- Карусель -->
-            <div id="myCarousel" class="carousel slide" data-interval="10000" data-ride="carousel">
+            <div id="myCarousel" class="carousel slide head-slide" data-interval="10000" data-ride="carousel">
                 <div class="carousel-inner">
 
                     <!--FIRST SLIDE-->
@@ -801,7 +801,7 @@
     <!--<div class="active item">-->
     <div class="container">
         <div class="row">
-            <div class="col-md-12 testimonial-bottom">
+            <div class="col-md-12 col-sm-12 testimonial-bottom">
                 <h3>Testimonials</h3>
             </div>
             <div class="slide-button-testimonials">
@@ -822,11 +822,11 @@
                     <div class="active item">
                         <div class="container">
                             <div class="row">
-                                <div class="col-md-2 testimonial-school-section">
+                                <div class="col-md-2 col-sm-3 testimonial-school-section">
                                     <img class="testimonial-school" src="../src/image/WE_blazon.png"
                                          alt="William Edwards"/>
                                 </div>
-                                <div class="col-md-4 testimonial-info">
+                                <div class="col-md-4 col-sm-5 testimonial-info">
                                     <div class="testimonials-title">
                                         <h4>William Edwards School</h4></div>
                                     <div>“Brendan gave an inspirational assembly to students in Years 7 and 8
@@ -840,7 +840,7 @@
                                         <br>— Matt Bowden, PE Teacher
                                     </div>
                                 </div>
-                                <div class="col-md-3 testimonial-picture-padding">
+                                <div class="col-md-3 col-sm-2 testimonial-picture-padding">
                                     <div class="testimonial1-background">
                                         <a class="play-button-href" href="#videoyoutube" data-toggle="modal">
                                             <button type="button" class="play-button"
@@ -849,7 +849,7 @@
 
                                         </a></div>
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-md-3 col-sm-2">
                                     <a class="img-wrapper show_img_popup" content="../src/image/b1.jpg">
                                         <div class="testimonial2-background"></div>
                                     </a>
@@ -860,10 +860,10 @@
                     </div>
                     <div class="container">
                         <div class="row school2-margin">
-                            <div class="col-md-2 testimonial-school-section">
+                            <div class="col-md-2 col-sm-2 testimonial-school-section">
                                 <img class="testimonial-school" src="../src/image/WH_blazon.png" alt="WH"/>
                             </div>
-                            <div class="col-md-4 testimonial-info">
+                            <div class="col-md-4 col-sm-5 testimonial-info">
                                 <div class="testimonials-title">
                                     <h4>Woodhey High School</h4></div>
                                 <div>"Brendan delivered a personal engaging motivational and humorous speech to our
@@ -876,12 +876,12 @@
                                     <br>— Olivia Williams, PE Teacher.
                                 </div>
                             </div>
-                            <div class="col-md-3 testimonial-picture-padding">
+                            <div class="col-md-3 col-sm-3 testimonial-picture-padding">
                                 <a class="img-wrapper show_img_popup" content="../src/image/WH1.jpg">
                                 <div class="testimonial3-background"></div>
                                 </a>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-3 col-sm-3">
                                 <a class="img-wrapper show_img_popup" content="../src/image/WH2.JPG">
                                 <div class="testimonial4-background"></div>
                                 </a>
