--- a/sport/index.html
+++ b/sport/index.html
@@ -822,7 +822,7 @@
                     <div class="active item">
                         <div class="container">
                             <div class="row">
-                                <div class="col-md-2 col-sm-3 testimonial-school-section">
+                                <div class="col-md-2 col-sm-2 testimonial-school-section">
                                     <img class="testimonial-school" src="../src/image/WE_blazon.png"
                                          alt="William Edwards"/>
                                 </div>
@@ -849,7 +849,7 @@
 
                                         </a></div>
                                 </div>
-                                <div class="col-md-3 col-sm-2">
+                                <div class="col-md-3 col-sm-2 testimonial-picture-padding-right">
                                     <a class="img-wrapper show_img_popup" content="../src/image/b1.jpg">
                                         <div class="testimonial2-background"></div>
                                     </a>
@@ -881,7 +881,7 @@
                                 <div class="testimonial3-background"></div>
                                 </a>
                             </div>
-                            <div class="col-md-3 col-sm-3">
+                            <div class="col-md-3 col-sm-3 testimonial-picture-padding-right">
                                 <a class="img-wrapper show_img_popup" content="../src/image/WH2.JPG">
                                 <div class="testimonial4-background"></div>
                                 </a>
@@ -1047,7 +1047,7 @@
     <div class="container">
         <div class="row">
 
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-6">
                 <div class="contact_section-left">
                     <h3>
                         Feel free to ask questions via email, <br class="hidden-xs">
@@ -1057,7 +1057,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6">
+            <div class="col-md-6 col-sm-6">
 
                 <div class="contact_section-right">
 
@@ -1093,14 +1093,14 @@
 <footer id="contact" class="contacts">
     <div class="container">
         <div class="row">
-            <div class="col-md-2 contacts-margin">
+            <div class="col-md-2 col-sm-3 contacts-margin">
                 <div class="fontbold">Squad In Touch Ltd</div>
                 <div>Pacific House, 382
                     Kenton Road Harrow
                     Middlesex, HA3 8DP
                 </div>
             </div>
-            <div class="col-md-2 contacts-margin">
+            <div class="col-md-2 col-sm-3 contacts-margin">
                 <div class="fontbold">Contact information</div>
                 <div><a href="mailto:info@squadintouch.co.uk">info@squadintouch.co.uk</a>
                     01293 734004
@@ -1109,7 +1109,7 @@
                         class="contact-divider-color">&nbsp; | &nbsp;</span>
                     <a class="contact-decoration" href="https://twitter.com/squadintouch"> Twitter</a></div>
             </div>
-            <div class="col-md-4 col-md-offset-4 copyright-position">
+            <div class="col-md-4 col-sm-3 col-md-offset-4 col-sm-offset-3 copyright-position">
                 <img src="../src/image/logoccss.svg" alt="reily"/>
             </div>
         </div>
